@@ -52,62 +52,53 @@
         </coordinates>
     </include>
     
+    <include name="ContextCoordinates-Side">
+    	<coordinates>
+			<system>1</system>
+			<posx>0</posx>
+			<posy>0</posy>
+			<origin x="0" y="0" />
+		</coordinates> 
+    </include>
+    
     <include name="ContextMenuDefault">
         <control type="group">
-            <posx>267</posx>
-            <posy>517</posy>
-            <control type="image">
-                <description>shadow image</description>
-                <posx>5</posx>
-                <posy>505</posy>
-                <height>60</height>
-                <width>442</width>
-                <texture>dialogs/shutdown/shadow.png</texture>
-                <aspectratio>stretch</aspectratio>
-            </control>
-            <control type="image" id="999">
-                <description>background image</description>
-                <posx>0</posx>
-                <posy>0</posy>
-                <height>540</height>
-                <width>442</width>
-                <texture>dialogs/shutdown/shutdown.png</texture>
-                <aspectratio>stretch</aspectratio>
-            </control>
-            <control type="grouplist" id="996">
-                <description>grouplist for context buttons</description>
-                <posx>19</posx>
-                <posy>47</posy>
-                <width>404</width>
-                <itemgap>0</itemgap>
-                <height min="399" max="399">auto</height>
-                <control type="button" id="995">
-                    <description>Library editor</description>
-                    <width>404</width>
-                    <height>57</height>
-                    <font>Font-Condensed-S34</font>
-                    <align>left</align>
-                    <textcolor>FF484848</textcolor>
-                    <focusedcolor>DDFFFFFF</focusedcolor>
-                    <disabledcolor>FF484848</disabledcolor>
-                    <textoffsetx>25</textoffsetx>
-                    <label>$VAR[LibraryEditorLabel]</label>
-                    <onclick>XBMC.RunScript(script.libraryeditor,DBID=$INFO[ListItem.DBID])</onclick>
-                    <texturefocus>dialogs/options/buttons/default-fo.png</texturefocus>
-                    <visible>[Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes) | Container.Content(musicvideos) | Container.Content(artists) | Container.Content(albums) | Container.Content(songs)] + System.HasAddon(script.libraryeditor) + Control.IsVisible(1006)</visible>
-                </control>
-            </control>
-            <control type="group">
+        	<animation type="WindowOpen" reversible="false">
+				<effect type="slide" start="-650,0" end="0,0" time="300" delay="100" tween="cubic" easing="inout" />
+			</animation>
+            <posx>650</posx>
+            <posy>20</posy>
+            <include>OptionsAnimations</include>
+            
+			<control type="group">
+				<control type="image">
+					<posx>-40</posx>
+					<posy>-10</posy>
+					<width>452</width>
+					<height>1060</height>
+					<texture border="40">arctic/common/border-20.png</texture>
+				</control>
+				<control type="image">
+					<posx>-20</posx>
+					<posy>10</posy>
+					<width>412</width>
+					<height>1020</height>
+					<texture border="15">arctic/common/panel.png</texture>
+				</control>
+			</control>
+			<control type="group">
+            	<posx>-5</posx>
+            	<posy>930</posy>
                 <control type="image">
-                    <posx>9</posx>
-                    <posy>433</posy>
+                    <posx>0</posx>
+                    <posy>0</posy>
                     <width>100</width>
                     <height>100</height>
                     <texture>buttons/options_nofo.png</texture>
                 </control>
                 <control type="label">
-                    <posx>94</posx>
-                    <posy>433</posy>
+                    <posx>98</posx>
+                    <posy>0</posy>
                     <width>300</width>
                     <height>100</height>
                     <label>$LOCALIZE[41600]</label>
@@ -116,18 +107,43 @@
                     <shadowcolor>22000000</shadowcolor>
                 </control>
             </control>
+            <control type="grouplist" id="996">
+                <description>grouplist for context buttons</description>
+                <posx>0</posx>
+                <posy>20</posy>
+                <width>400</width>
+                <height>880</height>
+                <itemgap>0</itemgap>
+                <onleft>Back</onleft>
+				<onright>Back</onright>
+                <control type="button" id="995">
+                    <description>Library editor</description>
+                    <width>380</width>
+                    <height>80</height>
+                    <font>Font-Condensed-S34</font>
+                    <align>left</align>
+                    <textcolor>mod-infotags-alt</textcolor>
+                    <focusedcolor>DDFFFFFF</focusedcolor>
+                    <disabledcolor>FF484848</disabledcolor>
+                    <textoffsetx>25</textoffsetx>
+                    <label>$VAR[LibraryEditorLabel]</label>
+                    <onclick>XBMC.RunScript(script.libraryeditor,DBID=$INFO[ListItem.DBID])</onclick>
+                    <texturefocus border="10">views/other/focus-mod8-right.png</texturefocus>
+                    <visible>[Container.Content(movies) | Container.Content(tvshows) | Container.Content(seasons) | Container.Content(episodes) | Container.Content(musicvideos) | Container.Content(artists) | Container.Content(albums) | Container.Content(songs)] + System.HasAddon(script.libraryeditor) + Control.IsVisible(1006)</visible>
+                </control>
+            </control>
         </control>
         <control type="button" id="1000">
             <description>button template</description>
-            <width>404</width>
-            <height>57</height>
+            <width>380</width>
+            <height>80</height>
             <font>Font-Condensed-S34</font>
             <align>left</align>
-            <textcolor>FF484848</textcolor>
+            <textcolor>mod-infotags-alt</textcolor>
             <focusedcolor>DDFFFFFF</focusedcolor>
             <disabledcolor>FF484848</disabledcolor>
             <textoffsetx>25</textoffsetx>
-            <texturefocus>dialogs/options/buttons/default-fo.png</texturefocus>
+            <texturefocus border="10">views/other/focus-mod8-right.png</texturefocus>
         </control>
     </include>
     
